--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ main {
   overflow: hidden; }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
   float: left;
   position: relative;
   overflow: hidden; }
@@ -274,6 +274,15 @@ p {
     height: auto !important;
     float: left;
     transition: .5s; }
+
+.turquoise-bg {
+  background-color: #00AC98; }
+
+.green-bg {
+  background-color: #C2D500; }
+
+.orange-bg {
+  background-color: #F26524; }
 
 #featured-projects .small-headline {
   font-size: 18px !important;
@@ -697,7 +706,9 @@ footer {
 
 #half-screen {
   height: 60vh;
-  float: left; }
+  min-height: 20vh !important;
+  float: left;
+  overflow: hidden; }
   #half-screen .copy-container {
     margin-top: 75px;
     float: left; }
