--- a/css/style.scss
+++ b/css/style.scss
@@ -1812,7 +1812,7 @@ background-color: white;
 .portfolio-list{
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 50vh;
+  height: 400px;
   position: relative;
   transition: .5s;
   overflow: hidden;
@@ -2261,7 +2261,7 @@ padding-top: 7vh!important;
 
 
     #leadership{
-      padding-top: 20vh;
+      padding-top: 12.5vh;
       overflow: scroll!important;
 
 .name-container{
@@ -3174,7 +3174,7 @@ padding-top: 20vh;
   .portfolio-list{
     box-shadow: 0px 0px 5px #DBDADA;
     float: left;
-    height: 40vh;
+    height: 300px;
     position: relative;
     transition: .5s;
     overflow: hidden;
