--- a/css/style.css
+++ b/css/style.css
@@ -708,10 +708,10 @@ footer {
     padding-bottom: 25px; }
 
 #half-screen {
-  height: 60vh;
-  min-height: 20vh !important;
+  min-height: 37.5vh;
   float: left;
-  overflow: hidden; }
+  overflow: hidden;
+  margin-bottom: 15vh; }
   #half-screen .copy-container {
     margin-top: 75px;
     float: left; }
@@ -722,7 +722,7 @@ footer {
     z-index: -100;
     background-color: #f1f1f1;
     position: absolute;
-    height: 65%;
+    height: 100%;
     width: 100%;
     margin-left: 0; }
 
@@ -1348,8 +1348,8 @@ footer {
 #portfolio #press .portfolio-list {
   height: 350px; }
 #portfolio #press .portfolio-image-container {
-  min-height: 65%;
-  height: 65% !important;
+  min-height: 100px;
+  height: 200px;
   overflow: hidden; }
   #portfolio #press .portfolio-image-container img {
     width: 100%;
@@ -1641,11 +1641,11 @@ article {
   #portfolio ul {
     padding-left: 0 !important; }
   #portfolio #press .container-p {
-    height: 370px; }
+    height: 500px; }
   #portfolio #press .portfolio-list {
-    height: 357.5px; }
+    height: 490px; }
     #portfolio #press .portfolio-list .portfolio-image-container {
-      min-height: 70%; }
+      height: 400px; }
   #portfolio #press h3 {
     font-size: 16px; }
 
@@ -1687,6 +1687,28 @@ article {
 
   /* CLOSES #PROMOTION */
   /* ENDS PROMOTIONS */
+  /* ----------------------------------------------------------------- */
+  /* ----------------------------------------------------------------- */
+  /* BEGINS PRESS */
+  #portfolio #press h3 {
+    font-size: 18px; }
+  #portfolio #press p {
+    font-size: 12px !important; }
+  #portfolio #press .container-p {
+    min-height: 370px;
+    height: 50px !important; }
+  #portfolio #press .portfolio-list {
+    height: 350px !important;
+    transition: 0s; }
+    #portfolio #press .portfolio-list .portfolio-image-container {
+      min-height: 175px;
+      height: 100px;
+      overflow: hidden; }
+      #portfolio #press .portfolio-list .portfolio-image-container img {
+        width: 100%;
+        height: auto; }
+
+  /* CLOSES PRESS */
   /* ----------------------------------------------------------------- */ }
 /* !!CLOSES 768PX @MEDIA QUERY!! */
 /* ----------------------------------------------------------------- */
@@ -2153,27 +2175,9 @@ article {
     #promotion button {
       margin-top: 15px; }
 
-  /* ----------------------------------------------------------------- */
-  /* BEGINS PRESS */
-  #portfolio #press h3 {
-    font-size: 18px; }
-  #portfolio #press p {
-    font-size: 12px !important; }
-  #portfolio #press .container-p {
-    height: 360px; }
-  #portfolio #press .portfolio-list {
-    height: 357.5px;
-    transition: 0s; }
-  #portfolio #press .portfolio-image-container {
-    min-height: 65%;
-    height: 65% !important;
-    overflow: hidden; }
-    #portfolio #press .portfolio-image-container img {
-      width: 100%;
-      height: auto; }
-
-  /* CLOSES PRESS */
-  /* ----------------------------------------------------------------- */ }
+  /* DISCOVER MORE ----------------------------------------------------------------- */
+  #portfolio #press .container-p .portfolio-list .portfolio-image-container {
+    height: 220px; } }
 /* CLOSES 1200PX @MEDIA QUERY */
 @media (min-width: 1500px) {
   #promotion .form-container {
