--- a/css/style.css
+++ b/css/style.css
@@ -1127,50 +1127,53 @@ footer {
   animation-name: delay-opacity;
   animation-duration: 4s; }
 
-#portfolio {
-  height: auto;
-  min-height: 40vh; }
-  #portfolio .portfolio-container {
-    padding-left: 0; }
-  #portfolio section {
-    padding-top: 2vh;
-    float: left;
-    padding-left: 4vw;
-    padding-right: 4vw;
-    height: auto; }
-  #portfolio .container-p {
-    padding: 5px;
-    float: left !important; }
-  #portfolio .portfolio-list {
-    box-shadow: 0px 0px 5px #DBDADA;
-    float: left;
-    height: 35vh; }
-    #portfolio .portfolio-list a {
-      text-decoration: none; }
-    #portfolio .portfolio-list img {
-      width: 100%; }
-    #portfolio .portfolio-list h3 {
-      font-family: gotham;
-      color: #333033;
-      font-size: 18px;
-      padding-left: 15px;
-      padding-top: 15px;
-      margin: 0;
-      font-style: normal; }
-    #portfolio .portfolio-list p {
-      font-size: 14px;
-      font-family: gotham;
-      padding-left: 15px;
-      color: #333033;
-      padding-bottom: 15px;
-      margin: 0; }
-  #portfolio .portfolio-image-container {
-    min-height: 75%;
-    height: 75%;
-    overflow: hidden; }
-    #portfolio .portfolio-image-container img {
-      width: 100%;
+#articles {
+  padding: 0; }
+  #articles #press {
+    height: auto;
+    min-height: 40vh;
+    padding: 0; }
+    #articles #press .portfolio-container {
+      padding-left: 0; }
+    #articles #press section {
+      padding-top: 2vh;
+      float: left;
+      padding-left: 4vw;
+      padding-right: 4vw;
       height: auto; }
+    #articles #press .container-p {
+      padding: 5px;
+      float: left !important; }
+    #articles #press .portfolio-list {
+      box-shadow: 0px 0px 5px #DBDADA;
+      float: left;
+      height: 320px; }
+      #articles #press .portfolio-list a {
+        text-decoration: none; }
+      #articles #press .portfolio-list img {
+        width: 100%; }
+      #articles #press .portfolio-list h3 {
+        font-family: gotham;
+        color: #333033;
+        font-size: 18px;
+        padding: 10px;
+        margin: 0;
+        font-style: normal;
+        font-size: 16px; }
+      #articles #press .portfolio-list p {
+        font-size: 12px;
+        font-family: gotham;
+        padding-left: 10px;
+        padding: 5px;
+        color: #333033;
+        margin: 0; }
+    #articles #press .portfolio-image-container {
+      min-height: 200px;
+      height: 200px;
+      overflow: hidden; }
+      #articles #press .portfolio-image-container img {
+        width: 100%;
+        height: auto; }
 
 /* CLOSE PORTFOLIO */
 /* ENDS PORTFOLIO */
@@ -1754,7 +1757,60 @@ article {
       top: 55vh;
       border-left: 10px solid #C2D500; }
     #promotion button {
-      margin-top: 15px; } }
+      margin-top: 15px; }
+
+  /* ARTICLES/PORTFOLIO ----------------------------------------------------------------- */
+  #articles {
+    padding: 0; }
+    #articles #press {
+      height: auto;
+      min-height: 40vh;
+      padding: 0; }
+      #articles #press .portfolio-container {
+        padding-left: 0; }
+      #articles #press section {
+        padding-top: 2vh;
+        float: left;
+        padding-left: 4vw;
+        padding-right: 4vw;
+        height: auto; }
+      #articles #press .container-p {
+        padding: 5px;
+        float: left !important; }
+      #articles #press .portfolio-list {
+        box-shadow: 0px 0px 5px #DBDADA;
+        float: left;
+        height: 425px; }
+        #articles #press .portfolio-list a {
+          text-decoration: none; }
+        #articles #press .portfolio-list img {
+          width: 100%; }
+        #articles #press .portfolio-list h3 {
+          font-family: gotham;
+          color: #333033;
+          font-size: 18px;
+          padding: 10px;
+          margin: 0;
+          font-style: normal;
+          font-size: 16px; }
+        #articles #press .portfolio-list p {
+          font-size: 12px;
+          font-family: gotham;
+          padding-left: 10px;
+          padding: 5px;
+          color: #333033;
+          margin: 0; }
+      #articles #press .portfolio-image-container {
+        min-height: 200px;
+        height: 300px;
+        overflow: hidden; }
+        #articles #press .portfolio-image-container img {
+          height: 100%;
+          width: auto; }
+
+  /* CLOSE PORTFOLIO */
+  /* ENDS PORTFOLIO */ }
+/* CLOSES 992PX MEDIA QUERY -----------------------------------------------------------------*/
 @media (min-width: 1024px) {
   .bottom {
     width: 100vw;
