--- a/css/style.scss
+++ b/css/style.scss
@@ -1620,9 +1620,16 @@ li{
     animation-duration: 4s;
   }
 }
-#portfolio{
+
+
+
+
+#articles{
+  padding: 0;
+  #press{
 height: auto;
 min-height: 40vh;
+padding: 0;
 .portfolio-container{
   padding-left: 0;
 }
@@ -1641,7 +1648,7 @@ min-height: 40vh;
 .portfolio-list{
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 35vh;
+  height: 320px;
   a{
     text-decoration: none;
   }
@@ -1652,31 +1659,32 @@ min-height: 40vh;
     font-family: gotham;
     color: $black;
     font-size: 18px;
-    padding-left: 15px;
-    padding-top: 15px;
+    padding: 10px;
     margin: 0;
     font-style: normal;
+    font-size: 16px;
   }
   p{
-    font-size: 14px;
+    font-size: 12px;
     font-family: gotham;
-    padding-left: 15px;
+    padding-left: 10px;
+    padding: 5px;
     color: $black;
-    padding-bottom: 15px;
+
     margin: 0;
   }
 }
 
 .portfolio-image-container{
-  min-height: 75%;
-  height: 75%;
+  min-height: 200px;
+  height: 200px;
   overflow: hidden;
   img{
     width: 100%;
     height: auto;
   }
 }
-
+}
 } /* CLOSE PORTFOLIO */
 
 
@@ -2593,7 +2601,83 @@ height: 400px;
       margin-top: 15px;
     }
   }
-}
+
+
+
+  /* ARTICLES/PORTFOLIO ----------------------------------------------------------------- */
+
+  #articles{
+    padding: 0;
+    #press{
+  height: auto;
+  min-height: 40vh;
+  padding: 0;
+  .portfolio-container{
+    padding-left: 0;
+  }
+    section{
+      padding-top: 2vh;
+      float: left;
+      padding-left: 4vw;
+      padding-right: 4vw;
+      height: auto;
+    }
+
+  .container-p{
+      padding: 5px;
+      float: left!important;
+  }
+  .portfolio-list{
+    box-shadow: 0px 0px 5px #DBDADA;
+    float: left;
+    height: 425px;
+    a{
+      text-decoration: none;
+    }
+    img{
+      width: 100%;
+    }
+    h3{
+      font-family: gotham;
+      color: $black;
+      font-size: 18px;
+      padding: 10px;
+      margin: 0;
+      font-style: normal;
+      font-size: 16px;
+    }
+    p{
+      font-size: 12px;
+      font-family: gotham;
+      padding-left: 10px;
+      padding: 5px;
+      color: $black;
+
+      margin: 0;
+    }
+  }
+
+  .portfolio-image-container{
+    min-height: 200px;
+    height: 300px;
+    overflow: hidden;
+    img{
+      height: 100%;
+      width: auto;
+
+    }
+  }
+  }
+  } /* CLOSE PORTFOLIO */
+
+
+  /* ENDS PORTFOLIO */
+
+
+
+
+
+} /* CLOSES 992PX MEDIA QUERY -----------------------------------------------------------------*/
 
 @media (min-width: 1024px){
 
